--- a/app/templates/components/input-tags.hbs
+++ b/app/templates/components/input-tags.hbs
@@ -5,9 +5,7 @@
   style="display: none;"
   id="inputTags"
 >
-  {{!-- {{#each tags as |tag|}}
+  {{#each tags as |tag|}}
     <option value="{{tag}}" selected="selected">{{tag}}</option>
-  {{/each}} --}}
-  <option value="1" selected="selected">1</option>
-  <option value="2" selected="selected">2</option>
+  {{/each}}
 </select>
