--- a/app/templates/components/book-form.hbs
+++ b/app/templates/components/book-form.hbs
@@ -73,7 +73,7 @@
       class="col-sm-2 col-form-label text-right"
     >Теги</label>
     <div class="col-sm-10">
-      {{input-tags tags=book.tags tagName=""}}
+      {{input-tags tags=tags}}
     </div>
   </div>
   <div class="form-group row">
