--- a/app/templates/components/input-file.hbs
+++ b/app/templates/components/input-file.hbs
@@ -1,15 +1,16 @@
 <div class="custom-file">
   <input type="file" class="custom-file-input" id="customFile" lang="ru" />
   <label
-    class="custom-file-label form-control-lg placeholder-color"
+    class="custom-file-label form-control-lg
+      {{if isFileChoosen '' 'placeholder-color'}}"
     for="customFile"
     data-browse="Выбрать"
-  >Выберите файл</label>
+  >{{fileName}}</label>
 </div>
 <div class="input-group-append">
   <button
     class="btn btn-outline-secondary custom-file-clear"
     type="button"
-    disabled="disabled"
+    onclick={{action "removeFile"}}
   >X</button>
 </div>
