--- a/app/templates/components/book-card.hbs
+++ b/app/templates/components/book-card.hbs
@@ -30,7 +30,7 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{book.average_rating}}%;"
+                style={{progressbarStyle}}
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
