--- a/app/templates/components/book-form.hbs
+++ b/app/templates/components/book-form.hbs
@@ -63,9 +63,12 @@
       for="customFile"
       class="col-sm-2 col-form-label text-right"
     >Обложка</label>
-    <div class="input-group input-group-lg col-sm-10">
-      {{input-file tagName=""}}
-    </div>
+    {{input-file
+      uploadData=uploadData
+      uploadDataChanged=(action "uploadDataChanged")
+      tagName="div"
+      class="input-group input-group-lg col-sm-10"
+    }}
   </div>
   <div class="form-group row">
     <label
