--- a/app/templates/components/book-form.hbs
+++ b/app/templates/components/book-form.hbs
@@ -82,10 +82,14 @@
   <div class="form-group row">
     <div class="col-12 text-right">
       <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
-      <button
+      {{#link-to
+        "books"
         type="submit"
         class="btn btn-outline-secondary btn-lg"
-      >Отмена</button>
+        tagName="button"
+      }}
+        Отмена
+      {{/link-to}}
     </div>
   </div>
 </form>
