--- a/app/templates/components/book-card.hbs
+++ b/app/templates/components/book-card.hbs
@@ -71,7 +71,7 @@
             tagName="button"
             type="button"
             class="btn btn-edit"
-            onclick={{onclick}}
+            onclick={{deleteBook}}
           >
             <svg
               viewBox="0 0 16 16"
