--- a/app/templates/create-speaker.hbs
+++ b/app/templates/create-speaker.hbs
@@ -1,4 +1,4 @@
 <div class="htop">
   <h2 class="text-center">Редактирование спикера: Имя Фамилия</h2>
-  {{speaker-form speaker=model save=(action "updateSpeaker")}}
+  {{speaker-form speaker=model save=(action "createSpeaker")}}
 </div>
