--- a/app/templates/books.hbs
+++ b/app/templates/books.hbs
@@ -56,7 +56,7 @@
   </div>
   <div class="row row-cols-1 row-cols-md-3 fix-margin">
     {{#each books as |book|}}
-      {{book-card book=book tagName="" onclick=(action "deleteBook" book)}}
+      {{book-card book=book tagName="" deleteBook=(action "deleteBook" book)}}
     {{/each}}
   </div>
 </div>
