--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <div class="row align-items-center h-100 home-page-nav">
   <div class="col">
-    <a href="meetings.html" class="card text-center">
+    {{#link-to "meetings" class="card text-center"}}
       <div class="card-body">
         <svg
           viewBox="0 0 16 16"
@@ -15,7 +15,7 @@
         </svg>
         <h3>Встречи клуба</h3>
       </div>
-    </a>
+    {{/link-to}}
   </div>
   <div class="col">
     {{#link-to "books" class="card text-center"}}
