--- a/app/templates/books.hbs
+++ b/app/templates/books.hbs
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="row row-cols-1 row-cols-md-3 fix-margin">
-    {{#each books as |book|}}
+    {{#each model as |book|}}
       {{book-card book=book tagName="" deleteBook=(action "deleteBook" book)}}
     {{/each}}
   </div>
