--- a/app/templates/speakers.hbs
+++ b/app/templates/speakers.hbs
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="row row-cols-1 row-cols-md-3">
-    {{#each speakers as |speaker|}}
+    {{#each model as |speaker|}}
       {{speaker-card
         speaker=speaker
         deleteSpeaker=(action "deleteSpeaker" speaker)
