--- a/app/templates/components/book-form.hbs
+++ b/app/templates/components/book-form.hbs
@@ -1,80 +1,62 @@
-<form class="edit-form" onsubmit={{action "submitForm"}}>
+<form class="edit-form" onsubmit={{action "submitForm" }}>
   <div class="form-group row">
-    <label
-      for="inputTitle"
-      class="col-sm-2 col-form-label text-right"
-    >Название</label>
+    <label for="inputTitle" class="col-sm-2 col-form-label text-right">Название</label>
     <div class="col-sm-10">
       {{input
-        type="text"
-        class="form-control form-control-lg"
-        laceholder="Полное название книги"
-        value=name
+      type="text"
+      class="form-control form-control-lg"
+      placeholder="Полное название книги"
+      value=name
       }}
     </div>
   </div>
   <div class="form-group row">
-    <label
-      for="inputAuthor"
-      class="col-sm-2 col-form-label text-right"
-    >Автор</label>
+    <label for="inputAuthor" class="col-sm-2 col-form-label text-right">Автор</label>
     <div class="col-sm-10">
       {{input
-        type="text"
-        class="form-control form-control-lg"
-        id="inputAuthor"
-        placeholder="Фамилия И.О. автора"
-        value=author
+      type="text"
+      class="form-control form-control-lg"
+      id="inputAuthor"
+      placeholder="Фамилия И.О. автора"
+      value=author
       }}
     </div>
   </div>
   <div class="form-group row">
-    <label
-      for="inputPagesCount"
-      class="col-sm-2 col-form-label text-right"
-    >Объем</label>
+    <label for="inputPagesCount" class="col-sm-2 col-form-label text-right">Объем</label>
     <div class="col-sm-10">
       {{input
-        type="number"
-        class="form-control form-control-lg"
-        id="inputPagesCount"
-        placeholder="Количество страниц книги"
-        value=sumPages
+      type="number"
+      class="form-control form-control-lg"
+      id="inputPagesCount"
+      placeholder="Количество страниц книги"
+      value=sumPages
       }}
     </div>
   </div>
   <div class="form-group row">
-    <label
-      for="inputDescriptionURL"
-      class="col-sm-2 col-form-label text-right"
-    >Описание</label>
+    <label for="inputDescriptionURL" class="col-sm-2 col-form-label text-right">Описание</label>
     <div class="col-sm-10">
       {{input
-        type="url"
-        class="form-control form-control-lg"
-        id="inputDescriptionURL"
-        placeholder="Ссылка на сайт с описанием книги"
-        value=URLDescription
+      type="url"
+      class="form-control form-control-lg"
+      id="inputDescriptionURL"
+      placeholder="Ссылка на сайт с описанием книги"
+      value=URLDescription
       }}
     </div>
   </div>
   <div class="form-group row">
-    <label
-      for="customFile"
-      class="col-sm-2 col-form-label text-right"
-    >Обложка</label>
+    <label for="customFile" class="col-sm-2 col-form-label text-right">Обложка</label>
     {{input-file
-      uploadData=uploadData
-      uploadDataChanged=(action "uploadDataChanged")
-      tagName="div"
-      class="input-group input-group-lg col-sm-10"
+    uploadData=uploadData
+    uploadDataChanged=(action "uploadDataChanged")
+    tagName="div"
+    class="input-group input-group-lg col-sm-10"
     }}
   </div>
   <div class="form-group row">
-    <label
-      for="inputTags"
-      class="col-sm-2 col-form-label text-right"
-    >Теги</label>
+    <label for="inputTags" class="col-sm-2 col-form-label text-right">Теги</label>
     <div class="col-sm-10">
       {{input-tags tags=tags}}
     </div>
@@ -83,12 +65,12 @@
     <div class="col-12 text-right">
       <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
       {{#link-to
-        "books"
-        type="submit"
-        class="btn btn-outline-secondary btn-lg"
-        tagName="button"
+      "books"
+      type="submit"
+      class="btn btn-outline-secondary btn-lg"
+      tagName="button"
       }}
-        Отмена
+      Отмена
       {{/link-to}}
     </div>
   </div>
