--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,25 +1,12 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   {{#link-to "index" class="navbar-brand"}}
-    <img
-      src="{{env 'rootURL'}}images/logo-dark.png"
-      width="30"
-      height="30"
-      class="d-inline-block align-top"
-      alt=""
-      loading="lazy"
-    />
-    Книжный клуб
+  <img src="{{env 'rootURL'}}images/logo-dark.png" width="30" height="30" class="d-inline-block align-top" alt=""
+    loading="lazy" />
+  Книжный клуб
   {{/link-to}}
 
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Открыть меню"
-  >
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Открыть меню">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarContent">
