--- a/app/templates/components/input-tags.hbs
+++ b/app/templates/components/input-tags.hbs
@@ -1,11 +1,6 @@
 <!-- <input type="text" class="form-control" id="inputPatronymic" placeholder="#Теги через запятую"> -->
-<select
-  multiple="multiple"
-  data-role="tagsinput"
-  style="display: none;"
-  id="inputTags"
->
+<select multiple="multiple" data-role="tagsinput" style="display: none;" id="inputTags">
   {{#each tags as |tag|}}
-    <option value="{{tag}}" selected="selected">{{tag}}</option>
+  <option value="{{tag}}" selected="selected">{{tag}}</option>
   {{/each}}
 </select>
