--- a/app/templates/components/speaker-form.hbs
+++ b/app/templates/components/speaker-form.hbs
@@ -1,46 +1,37 @@
-<form class="edit-form" onsubmit={{action "submitForm"}}>
+<form class="edit-form" onsubmit={{action "submitForm" }}>
   <div class="form-group row">
-    <label
-      for="inputSurname"
-      class="col-sm-2 col-form-label text-right"
-    >Фамилия</label>
+    <label for="inputSurname" class="col-sm-2 col-form-label text-right">Фамилия</label>
     <div class="col-sm-10">
       {{input
-        type="text"
-        class="form-control form-control-lg"
-        id="inputSurname"
-        placeholder="Введите фамилию"
-        value=firstName
+      type="text"
+      class="form-control form-control-lg"
+      id="inputSurname"
+      placeholder="Введите фамилию"
+      value=lastName
       }}
     </div>
   </div>
   <div class="form-group row">
-    <label
-      for="inputName"
-      class="col-sm-2 col-form-label text-right"
-    >Имя</label>
+    <label for="inputName" class="col-sm-2 col-form-label text-right">Имя</label>
     <div class="col-sm-10">
       {{input
-        type="text"
-        class="form-control form-control-lg"
-        id="inputName"
-        placeholder="Введите имя"
-        value=lastName
+      type="text"
+      class="form-control form-control-lg"
+      id="inputName"
+      placeholder="Введите имя"
+      value=firstName
       }}
     </div>
   </div>
   <div class="form-group row">
-    <label
-      for="inputPatronymic"
-      class="col-sm-2 col-form-label text-right big"
-    >Отчество</label>
+    <label for="inputPatronymic" class="col-sm-2 col-form-label text-right big">Отчество</label>
     <div class="col-sm-10">
       {{input
-        type="text"
-        class="form-control form-control-lg"
-        id="inputPatronymic"
-        placeholder="Введите отчество"
-        value=patronymic
+      type="text"
+      class="form-control form-control-lg"
+      id="inputPatronymic"
+      placeholder="Введите отчество"
+      value=patronymic
       }}
     </div>
   </div>
@@ -48,11 +39,11 @@
     <div class="col-12 text-right">
       <button type="submit" class="btn btn-primary btn-lg">Сохранить</button>
       {{#link-to
-        "speakers"
-        type="submit"
-        class="btn btn-outline-secondary btn-lg"
+      "speakers"
+      type="submit"
+      class="btn btn-outline-secondary btn-lg"
       }}
-        Отмена
+      Отмена
       {{/link-to}}
     </div>
   </div>
