--- a/app/templates/components/input/input-datepicker.hbs
+++ b/app/templates/components/input/input-datepicker.hbs
@@ -1,4 +1,4 @@
-<div class="datepicker datepicker-meeting date input-group p-0">
+<div class="datepicker date input-group p-0 w-100">
   {{input
     type="text"
     placeholder="Дата встречи"
