--- a/app/templates/books.hbs
+++ b/app/templates/books.hbs
@@ -1,3 +1,4 @@
+<div class="container h-100">
 <div class="htop">
   <h2 class="text-center">Книги</h2>
   <div class="form-row navbar-panel justify-content-between">
@@ -45,4 +46,5 @@
     {{book-card book=book tagName="" deleteBook=(action "deleteBook" book)}}
     {{/each}}
   </div>
+</div> 
 </div>
