--- a/app/templates/error.hbs
+++ b/app/templates/error.hbs
@@ -1,3 +1,5 @@
-<div class="row align-items-center justify-content-center h-100">
-  <img src="{{env 'rootURL'}}images/error.jpeg" style="width: 100px;" alt="" />
+<div class="container h-100">
+  <div class="row align-items-center justify-content-center h-100">
+    <img src="{{env 'rootURL'}}images/error.jpeg" style="width: 100px;" alt="" />
+  </div>
 </div>
