--- a/app/templates/create-speaker.hbs
+++ b/app/templates/create-speaker.hbs
@@ -1,4 +1,6 @@
-<div class="htop">
-  <h2 class="text-center">Редактирование спикера: Имя Фамилия</h2>
-  {{speaker-form speaker=model save=(action "createSpeaker")}}
+<div class="container h-100">
+  <div class="htop">
+    <h2 class="text-center">Редактирование спикера: Имя Фамилия</h2>
+    {{speaker-form speaker=model save=(action "createSpeaker")}}
+  </div>
 </div>
