--- a/app/templates/edit-book.hbs
+++ b/app/templates/edit-book.hbs
@@ -1,4 +1,6 @@
-<div class="htop">
-  <h2 class="text-center">Редактирование книги: Название</h2>
-  {{book-form book=model save=(action "updateBook")}}
+<div class="container h-100">
+  <div class="htop">
+    <h2 class="text-center">Редактирование книги: Название</h2>
+    {{book-form book=model save=(action "updateBook")}}
+  </div>
 </div>
