--- a/app/templates/edit-meeting.hbs
+++ b/app/templates/edit-meeting.hbs
@@ -1,4 +1,6 @@
-<div class="htop">
-    <h2 class="text-center">Редактирование встречи</h2>
-    {{meeting-form meeting=model save=(action "updateMeeting")}}
+<div class="container h-100">
+    <div class="htop">
+        <h2 class="text-center">Редактирование встречи</h2>
+        {{meeting-form meeting=model save=(action "updateMeeting")}}
+    </div>
 </div>
