--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -33,25 +33,18 @@
     </ul>
     <ul class="nav navbar-nav">
 
-      {{#link-to "register"}}
-      <li class="nav-item">
-        <a class="nav-link text-info" href="#">Регистрация</a>
-      </li>
-      {{/link-to}}
-      {{#link-to "login"}}
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Войти</a>
-      </li>
-      {{/link-to}}
+      {{#if session.isAuthenticated}}
+      <li class="nav-item"><a href="#" onclick={{action "logout" }}>Выйти</a></li>
+      {{else}}
+      <li class="nav-item">{{#link-to "register" class="nav-link text-info"}}Регистрация{{/link-to}}</li>
+      <li class="nav-item">{{#link-to "login" class="nav-link"}}Войти{{/link-to}}</li>
+      {{/if}}
+
     </ul>
   </div>
 </nav>
-{{#if session.isAuthenticated}}
-      <div class="current-user">
-        Hello, <strong>{{currentUser.user.username}}</strong>
-      </div>
-    {{/if}}
- {{outlet}}
+
+{{outlet}}
 <footer class="footer">
   <div class="container">
     <span>&copy; New Platform Ltd., 2022</span>
