--- a/app/templates/components/meeting-card.hbs
+++ b/app/templates/components/meeting-card.hbs
@@ -4,6 +4,7 @@
     <div class="col-md-auto">
       {{input/input-datepicker value=meeting.dataMeeting disabled=true}}
     </div>
+    {{#if session.isAuthenticated}}
     <div class="col-md-auto">
       {{#link-to "edit-meeting" meeting.id type="button" class="btn btn-edit"}}
         <svg
@@ -39,6 +40,7 @@
         </svg>
       </button>
     </div>
+    {{/if}}
   </div>
   <h4>Список докладов</h4>
 
