--- a/app/templates/components/input/input-datepicker.hbs
+++ b/app/templates/components/input/input-datepicker.hbs
@@ -1,7 +1,7 @@
 <div class="datepicker date input-group p-0 w-100">
   {{input
     type="text"
-    placeholder="Дата встречи"
+    placeholder=(t "menu.dateMeeting")
     class="form-control meeting-date"
     value=value
     disabled=(unless disabled false true)
