--- a/app/templates/components/register-form.hbs
+++ b/app/templates/components/register-form.hbs
@@ -1,31 +1,47 @@
 <form onsubmit={{action "saveReview" }}>
     <img class="mb-4" src="images/logo-dark.png" alt="" height="57">
-    <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
+    <h1 class="h3 mb-3 fw-normal">{{t "menu.register"}}</h1>
+    {{#each errors as |error|}}
+    <div class="text-danger">{{error.detail}}</div>
+    {{/each}}
 
     <div class="form-floating">
         {{input type="email" class="form-control" placeholder="name@example.com" value=email}}
+        {{#if isSubmit}}
+        {{#if (v-get this 'email' 'isInvalid')}}
+        <span class="text-danger">
+            {{v-get this 'email' 'message'}}
+        </span>
+        {{/if}}
+        {{/if}}
         {{#each errors.email as |error|}}
-        <span class="error-message">{{error.message}}</span>
+        <span class="text-danger">{{error.message}}</span>
         {{/each}}
-    </div>
-    <div class="form-floating">
-        {{input type="password" class="form-control" placeholder="Пароль" value=password}}
 
-        {{#each errors.password as |error|}}
-        <span class="error-message">{{error.message}}</span>
-        {{/each}}
+
+    </div>
+
+    <div class="form-floating">
+        {{input type="password" class="form-control" placeholder="password" value=password}}
+        {{#if isSubmit}}
+        {{#if (v-get this 'password' 'isInvalid')}}
+        <span class="text-danger">
+            {{v-get this 'password' 'message'}}
+        </span>
+        {{/if}}
+        {{/if}}
     </div>
 
     <div class="field">
         {{g-recaptcha-v2
-            siteKey=siteKeyCaptcha
-            verified=(action "verified")
-            expired=(action "expired")
-            reset=reset
+        siteKey=siteKeyCaptcha
+        verified=(action "verified")
+        expired=(action "expired")
+        reset=reset
         }}
     </div>
-    <button class="w-100 btn btn-lg btn-primary mb-3" type="submit" disabled={{iAmRobot}}>Зарегистрироваться</button>
+    <button class="w-100 btn btn-lg btn-primary mb-3" type="submit" disabled={{iAmRobot}}>{{t "menu.register"}}</button>
     {{#link-to "index" class="navbar-brand"}}
-    <a class="w-100" href="index.html">Назад</a>
+    <a class="w-100" href="index.html">{{t "menu.back"}}</a>
     {{/link-to}}
 </form>
