--- a/app/templates/components/meeting-card.hbs
+++ b/app/templates/components/meeting-card.hbs
@@ -1,8 +1,8 @@
 <div class="border border-dark rounded p-4 mb-4">
-  <h4>Дата встречи</h4>
+  <h4>{{t "menu.dateMeeting"}}</h4>
   <div class="row h-100 justify-content-between mb-4">
     <div class="col-md-auto">
-      {{input/input-datepicker value=meeting.dataMeeting disabled=true}}
+      {{input/input-datepicker value=meeting.dateMeeting disabled=true}}
     </div>
     {{#if session.isAuthenticated}}
     <div class="col-md-auto">
@@ -42,7 +42,7 @@
     </div>
     {{/if}}
   </div>
-  <h4>Список докладов</h4>
+  <h4>{{t "menu.listReports"}}</h4>
 
   <ul class="list-group">
     {{#each meeting.reports as |report|}}
