--- a/app/templates/components/meeting/meeting-card.hbs
+++ b/app/templates/components/meeting/meeting-card.hbs
@@ -46,7 +46,7 @@
 
   <ul class="list-group">
     {{#each meeting.reports as |report|}}
-      {{meeting-card/report report=report}}
+      {{report/report-card report=report}}
     {{/each}}
   </ul>
 </div>
