--- a/app/templates/create-meeting.hbs
+++ b/app/templates/create-meeting.hbs
@@ -1,3 +1,6 @@
 <div class="container h-100">
-    {{outlet}}
+    <div class="htop">
+        <h2 class="text-center">Создать встречу</h2>
+        {{meeting/meeting-form meeting=model.meeting listBook=model.listBook listSpeaker=model.listSpeaker save=(action "updateMeeting") saveReport=(action 'saveReport') }}
+    </div>
 </div>
