--- a/app/templates/edit-meeting.hbs
+++ b/app/templates/edit-meeting.hbs
@@ -1,6 +1,6 @@
 <div class="container h-100">
     <div class="htop">
         <h2 class="text-center">Редактирование встречи</h2>
-        {{meeting-form meeting=model save=(action "updateMeeting")}}
+        {{meeting/meeting-form meeting=model.meeting listBook=model.listBook listSpeaker=model.listSpeaker save=(action "updateMeeting") saveReport=(action 'saveReport')}}
     </div>
 </div>
