--- a/app/templates/components/book-form.hbs
+++ b/app/templates/components/book-form.hbs
@@ -42,7 +42,7 @@
       class="form-control form-control-lg"
       id="inputDescriptionURL"
       placeholder="Ссылка на сайт с описанием книги"
-      value=URLDescription
+      value=urlDescription
       }}
     </div>
   </div>
