--- a/app/templates/components/book-card.hbs
+++ b/app/templates/components/book-card.hbs
@@ -1,6 +1,6 @@
 <div class="col mb-4">
   <div class="card">
-    <img src={{if book.URLcover book.URLcover "images/book-cover.jpg" }} class="card-img-top" alt="Обложка книги" />
+    <img src={{if book.urlCover book.urlCover "images/book-cover.jpg" }} class="card-img-top" alt="Обложка книги" />
     <div class="card-header">
       <h5 class="card-title">{{book.name}}</h5>
     </div>
